<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePictureSelect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PFSelectPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Profile Picture"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user_profile"
                    android:id="@+id/picture1"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="User Profile Picture"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:layout_marginVertical="75dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp">

                <ImageView
                    android:id="@+id/picture2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/aiprofilepic1" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Gym Bro"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:layout_marginVertical="75dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="50dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/aiprofilepic2"
                    android:id="@+id/picture3"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Gym Girl"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:layout_marginVertical="75dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileSelectBackBtn"
            android:backgroundTint="@color/teal_200"
            android:text="Back"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginLeft="250dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>