...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_gray">

        <TextView
            android:id="@+id/helloUserTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="Hello User"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/light_gray"
            >

            <Button
                android:id="@+id/searchFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/search"
                android:backgroundTint="@color/light_gray"
                android:layout_marginStart="20dp"/>
            <Button
                android:id="@+id/UserProfileFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/user_profile"
                android:backgroundTint="@color/light_gray"
                android:layout_marginStart="55dp"/>

...
